7.0.3 (04-05-2021)
- New Fixture: tuition payment plan now shows if is reachable
- Released module for ISCTE

7.0.2 (13-04-2021)
- Bug Fix: Invoking deprecated payment request service (UL-ISEG-552, UL-ISEG-560)

7.0.1 (12-04-2021)
- Bug Fix: Do not consider as in academic debt, debit entries in compliant open payment plans
- Improvement: Show debt report file size as kb, if the size is lower than 1MB
- Bug Fix: Validate that debt report request's endDate is not before beginDate

7.0.0 (10-04-2021)
- New Fixture: Digital Payment Platforms

6.3.0 (10-04-2021)
- Refactor: Digital Payment Platform domain model

6.2.1 (25-03-2021)
- Improvement: Segregate information included in debt report request, based in type chosen by user

6.2.0 (23-03-2021)
- New Fixture: Payment penalty taxes

6.1.0 (10-03-2021)
- Refactor: Builder class to create academic treasury target debts

6.0.0 (01-03-2021)
- New Fixture: Payment plans for debit entries

5.3.3 (31-01-2021)
- Refactor: Added messages translation used by 3D Secure address select page (jsp) 

5.3.2 (13-11-2020)
- Refactor: Replace usage of deprecated method Degree.getExecutionDegrees(AcademicInterval)

5.3.1 (16-09-2020)
- Bug Fix: If there are not debit entries to process in creation debt generation rule, throw exception to abort transaction and prevent tuitions being created

5.3.0 (13-09-2020)
- Bug fix: Prevent exception in generating tuition when zip code does not exist

5.2.4 (07-09-2020)
- Bug fix: Improve debt report request processing, to improve memory usage

5.2.3 (14-08-2020)
- Bug Fix: Filter correctly tuition payment plans

5.2.2 (27-07-2020)
- Bug Fix: Fix error of payment plan copies with no fixed due date set

5.2.1 (14-07-2020)
- Refactor: Disable excludeifMatches for now to evaluate if it is necessary

5.2.0 (14-07-2020)
- New Fixture: Support multiple restrictions in academic debt generation rule

5.1.1 (08-07-2020)