@@ -599,6 +599,7 @@ class debtGeneration.AcademicDebtGenerationRuleType {
 		}
 	}
 
+// Deprecated
 class debtGeneration.DebtGenerationRuleRestriction {
 	String name;
 	String strategyImplementation;
@@ -749,7 +750,6 @@ class debtGeneration.AcademicDebtGenerationRuleEntry {
 	}
 
 class debtGeneration.AcademicDebtGenerationRuleRestriction {
-	boolean excludeIfMatches;
 }
 
 	relation AcademicDebtGenerationRuleRestrictionDomainRoot {
